# akhand-office-v5-replit

./: app.py  pyproject.toml  requirements.txt  styles.css
.streamlit/: secrets.toml
attached_assets/: Pasted-I-want-to-make-a-streamlit-webapp-Key-feature-Admin-dashboard-1--1740983929729.txt  Pasted-sqlalchemy-exc-IntegrityError-psycopg2-errors-UniqueViolation-duplicate-key-value-violates-unique-1740984487623.txt
models/: database.py  models.py
utils/: auth.py  pdf.py
views/: __init__.py  admin.py  company.py  employee.py  messages.py  tasks.py
